basic getBalot endpoint
